--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,6 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/no-empty-object-type": "warn"
+    "@typescript-eslint/no-empty-object-type": "off"
   }
 }
