--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,6 @@
     "@typescript-eslint/no-empty-object-type": "off",
     "react/display-name": "off",
     "react-hooks/rules-of-hooks": "warn",
-    "react-hooks/exhaustive-deps": "off"
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
